--- a/index.css
+++ b/index.css
@@ -1,3 +1,82 @@
-#heading{
-    color: rebeccapurple;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 200px;
+}
+
+.navbar{
+    margin:0px 20px
+}
+
+.navbar ul{
+    display: flex;
+    list-style: none;
+    font-size: 24px;
+}
+
+.navbar ul li{
+    padding: 10px;
+    margin: 10px;
+}
+
+.search{
+    padding: 10px;
+}
+
+.res-card{
+    width: 250px;
+    height: 400px;
+   margin: 10px 10px;
+    padding:5px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+.res-logo{
+    width: 190px;
+}
+
+.filter-btn{
+    margin: 10px;
+    padding:2px 2px;
+    cursor: pointer;
+}
+
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    width: 250px;
+    height: 400px;
+   margin: 10px 10px;
+    padding:5px;
+    background-color: #f0f0f0;
+    margin: 20px;
+}
+
+.login{
+    padding: 0 20px;
+    cursor: pointer;
+}
+
+.search-box{
+    margin: 0px 3px;
+}
+
+.filter{
+    display: flex;
 }
